  * Do not accept tabs in text views, to allow keyboard navigation.
  * Added support for setting 'content type' and 'safety level'.
  * Added support to declare pictures to 'show up on global search results'.
  * Added mnemonic to the 'Edit details' and the 'Settings' dialog.
  * Renamed 'Albums' as 'Sets'.
  * Remove pictures from UI as soon as they get uploaded.
  * Added new translations: British English (en_GB), French (fr),
    Swedish (sv), Galician (gl), German (de) and Slovenian (sl).
    See TRANSLATORS file for more details.

0.3 (22 Dec 2010)

  * Fixed problems building debian packages.
  * Committed patches related to GNOME 3.0 integration (Javier Jardón).
  * Got rid of libcurl and improved integration with the mainloop by
    replacing the flickcurl library with our asynchronous (implements
    the GAsync API) library based in libsoup: flicksoup.
  * Improved authentication process. Made it more seamless and less
    error prone. Also, added a menu item to re-authorize if needed.
  * Better error handling, properly reporting the user when needed.
  * Cleaned up a lot the code of frogr and flicksoup. Made it more
    simple, hackable and robust. Still not perfect, though :-).
  * Allow cancelling uploads in progress, and resume them later.
  * Fixed bug uploading files with special characters in its name.
  * Added support for flickr albums. Now it's possible to select which
    album the pictures should be assigned to once uploaded.
  * New layout in the menu bar.
  * Updated translations.
  * Lots of bugfixes, as well as several minor improvements.

0.2 (12 Oct 2009)

  * Generate ChangeLog from git log with 'make dist'
  * Added .spec file for fedora 11 packaging system (Adrián Pérez)
  * Added drag'n'drop support for loading pictures in frogr
  * Added support to add tags to pictures (instead of just replacing)
  * Fixed (legacy) support for libgnome2 to compile in debian lenny
  * Use accesor functions instead direct access and removed some