@@ -31,7 +31,6 @@ frogr_util_open_url_in_browser (const gchar *url)
   if (url == NULL)
     return;
 
-#if GTK_CHECK_VERSION (2,14,0)
   gchar *command = NULL;
   GError *error = NULL;
 
@@ -46,9 +45,6 @@ frogr_util_open_url_in_browser (const gchar *url)
       g_debug ("Error opening URL %s: %s", url, error->message);
       g_error_free (error);
     }
-#else
-  gnome_url_show (url);
-#endif
 }
 
 static void
